--- a/MEU PRIMEIRO PROJETO/css/main.css
+++ b/MEU PRIMEIRO PROJETO/css/main.css
@@ -1,18 +1,78 @@
-body {
-    width: 100%;
-    height: 100%;
+* {
+    margin: 0;
+    padding: 0;
 }
-.menu-principal {
-    width: 100%;
-    background-color: #252323;
-    height: 60px;
-}
-.main {
-    margin: 0 auto;
-    width: 980px;
-    position: relative;
 
+.nav {
+    background-color: #f5f5f5;
+    position: relative;
 }
-.logo {
-    padding: 15px;
+
+.nav-lists {
+    display: flex;
+    justify-content: space-between;
+    width: 30%;
+    list-style: none;
+    text-transform: uppercase;
+    margin-left: 30px;
+    height: 40px;
+}
+
+.nav-list {
+    margin: auto 0;
+}
+
+.nav-sub-list {
+    display: none;
+    list-style: none;
+    position: absolute;
+    padding-top: 30px;
+    background-color: #f5f5f5;
+    width: 100%;
+}
+
+.nav-sub-list h5 {
+    padding-top: -50px;
+}
+
+.nav-sub-list a {
+    text-decoration: none;
+}
+
+.nav-list:hover ul {
+    display: block;
+}
+
+.content {
+    display: flex;
+    align-items: center;
+    margin: 0 100px;
+}
+
+.line {
+    width: 20px;
+    height: 2px;
+    margin: 3px;
+    background-color: red;
+}
+
+.animação {
+    transition: 0.3s all;
+}
+
+.animaçao .line-1 {
+    transform: rotate(-45deg);
+}
+
+.animaçao .line-3 {
+    opacity: 0;
+}
+
+.animaçao .line-2 {
+    transform: rotate(45deg);
+}
+
+.exit {
+    position: absolute;
+    right: 30px;
 }
